Refactoring/#258 used a non root user to run jupyter in the docker image ai lab (#231)
* Use separate user for running Jupyter
Additionally Same as AMI and VM Editions also the Docker Edition uses a
non-root user for executing the ansible installation.
* added dependency to gpg-agent
* Added become for disabling core dumps
* Improved Ansible output for pip install
* fixed Ansible warning about providing a list of dictionaries to vars:
See https://docs.ansible.com/ansible/latest/porting_guides/porting_guide_8.html#deprecated
* Updated tests for docker Edition
* Increased time out for commiting the Docker container
As integration tests in test_create_dss_docker_image.py failed with timeout
error in test_install_notebook_connector during docker.commit().
* Updated dependencies to fix vulnerabilities
* Added free disk space to workflows/check_ci.yaml
* Use user "jupyter" for EC2, too
* Updated documentation
* Updated dependency network-manager
[CodeBuild]
---------

Co-authored-by: Torsten Kilias <tkilias@users.noreply.github.com>

--- a/exasol/ds/sandbox/runtime/ansible/ai_lab_docker_playbook.yml
+++ b/exasol/ds/sandbox/runtime/ansible/ai_lab_docker_playbook.yml
@@ -4,22 +4,39 @@
   vars:
       ansible_python_interpreter: python3
   tasks:
-    - name: Add docker container to inventory
+    - name: Add Docker Container to Ansible Inventory
       add_host:
         name: "{{docker_container}}"
         groups: docker_container_group
         ansible_connection: docker
 
-- name: Setup AI-Lab Docker Container
+- name: Prepare Ansible Access
   hosts: docker_container_group
   gather_facts: true
   vars:
-      ansible_python_interpreter: python3
-      user_name: "{{ ansible_user_id }}"
-      user_home: "{{ ansible_env.HOME }}"
-      initial_notebook_folder: "{{ user_home }}/notebook-defaults"
-      need_sudo: false
-      docker_integration_test: true
+    my_ansible_user: "ubuntu"
+    jupyter_user: "jupyter"
+    jupyter_group: "jupyter"
+    jupyter_user_home: "/home/jupyter"
+    need_sudo: no
+  tasks:
+    - import_tasks: apt_update.yml
+    - name: Ansible Access
+      include_role:
+        name: ansible_access
+
+- name: Setup AI-Lab Docker Container
+  hosts: docker_container_group
+  remote_user: "ubuntu"
+  gather_facts: true
+  vars:
+    ansible_python_interpreter: python3
+    user_name: "jupyter"
+    user_group: "jupyter"
+    user_home: "/home/jupyter"
+    initial_notebook_folder: "{{ user_home }}/notebook-defaults"
+    need_sudo: yes
+    docker_integration_test: true
   tasks:
     - import_tasks: general_setup_tasks.yml
     - import_tasks: cleanup_tasks.yml
