--- a/exasol/ds/sandbox/runtime/ansible/general_setup_tasks.yml
+++ b/exasol/ds/sandbox/runtime/ansible/general_setup_tasks.yml
@@ -1,4 +1,4 @@
-- name: Set facts for entry point
+- name: Set facts for Entry Point
   vars:
     jupyter_virtualenv: "{{user_home}}/jupyterenv"
   ansible.builtin.set_fact:
@@ -15,14 +15,12 @@
         initial: "{{ initial_notebook_folder }}"
         final: "{{user_home}}/notebooks"
     cacheable: yes
-- name: Update and upgrade apt packages
-  apt:
-    upgrade: yes
-    update_cache: yes
-  become: "{{need_sudo}}"
 - name: Install rsync
   include_role:
     name: rsync
+- name: Create Group and User for Running Jupyter Server
+  include_role:
+    name: jupyter_user
 - name: Copy Entry Point Script
   include_role:
     name: entrypoint
@@ -36,7 +34,14 @@
     jupyterlab_password: "{{ dss_facts.jupyter.password }}"
     jupyterlab_notebook_folder_initial: "{{ dss_facts.notebook_folder.initial }}"
     jupyterlab_notebook_folder: "{{ dss_facts.notebook_folder.final }}"
-- name: Clear pip cache
+- name: Change Owner of All Files and Dirs in Home Directory
+  ansible.builtin.file:
+    path: "{{ user_home }}"
+    owner: "{{ user_name }}"
+    group: "{{ user_group }}"
+    recurse: true
+  become: "{{ need_sudo }}"
+- name: Clear pip Cache
   ansible.builtin.file:
     path: /root/.cache/pip
     state: absent
