--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,9 +32,9 @@ click = "^8.1.3"
 boto3 = "^1.22.0"
 jinja2 = ">=3.1.0"
 ansible-runner = "^2.2.1"
-ansible = "^9.2.0"
+ansible = "^10.1.0" # was ansible = "^9.2.0"
 importlib_resources = ">=5.4.0"
-rich = "^12.5.1"
+rich = "^13.7.1" # was "^12.5.1"
 pandas = "^1.4.0"
 humanfriendly = "^10.0"
 tenacity = "^8.2.3"
@@ -42,7 +42,7 @@ pygithub = "^2.2.0"
 importlib-metadata = "^7.0.1"
 
 [tool.poetry.group.dev.dependencies]
-pytest-check-links = "^0.9.0"
+pytest-check-links = "^0.10.1" # was "^0.9.0"
 
 [build-system]
 requires = ["poetry_core>=1.0.0"]
@@ -51,15 +51,17 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.dev-dependencies]
 toml = ">=0.10.2"
-pytest = "^7.1.1"
+pytest = "^8.2.2"
 pytest-mock = "^3.7.0"
-cfn-lint = "^0.65.1"
+cfn-lint = "^1.4.2" # was "^0.65.1"
 gitpython = ">=2.1.0"
 localstack = "^3.1.0"
 # docker 7.0.0 is broken
 # see https://github.com/docker/docker-py/issues/3223
 docker = {version = "^6.1.3", markers = "sys_platform != 'win32'"}
-fabric = "^2.7.1"
+fabric = "^3.2.2" # was "^2.7.1"
+# version >= 2.32 no longer compatible with docker-compose
+# See https://github.com/psf/requests/issues/6707
 requests = "<2.32.0"
 
 
