--- a/.github/actions/prepare_test_env/action.yml
+++ b/.github/actions/prepare_test_env/action.yml
@@ -32,4 +32,4 @@ runs:
      uses: exasol/python-toolbox/.github/actions/python-environment@0.14.0
      with:
        python-version: "3.10"
-       poetry-version: "1.8.2"
+       poetry-version: '1.8.5'
