--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,7 +20,7 @@ jobs:
        uses: exasol/python-toolbox/.github/actions/python-environment@0.14.0
        with:
          python-version: "3.10"
-         poetry-version: "1.8.2"
+         poetry-version: '1.8.5'
 
      - name: Check Version Number
        run: poetry run python3 -u "./scripts/build/check_release.py"
